--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Install python3-pip
-        run: sudo dnf -y install python3-pip
+        run: sudo apt-get -y install python3-pip
       - name: Install dependencies
         run: pip3 install -r requirements.txt
       - name: Run unit tests
