--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -20,7 +20,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install setuptools wheel twine build
+          pip install setuptools wheel twine
+          pip install build
 
       - name: Build and publish
         env:
