--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,13 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["dtorch"]
+packages = ["dtorch", "dtorchvision", "dtorchtext"]
 
 [project]
+dependencies = [
+  'requests',
+  'numpy'
+]
 name = "dtorch"
 version = "0.0.4"
 authors = [
