--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["dtorch", "dtorchvision", "dtorchtext"]
+packages = ["dtorch", "dtorchvision", "dtorchtext", "dtorchtree"]
 
 [project]
 dependencies = [
@@ -11,7 +11,7 @@ dependencies = [
   'numpy'
 ]
 name = "dtorch"
-version = "0.0.5"
+version = "0.0.7"
 authors = [
   { name="Just1truc", email="hyppoduc@gmail.com" },
 ]
